# python-backend

Day12/: README.md  pyproject.toml  student_db.py
Day13/: day13.py
Day14/: math_utils.py  test.py  test_test.py
Day15/: day15.py  extra15.py
Day16/: day16.py  extra.py  extra2.py  extra3.py
Day20/: main.py
Day21/: mainn.py
Day22/: day22.py
Day23/: day23.py
Project/: Project2.py  project1.py  project3.py  project4.py
day1/: primenum.py  python1.py
day10/: day10.py  exercise.py
day11/: Extra.py  day11.py
day2/: factorial.py  fibonacci.py
day3/: main.py  my_utils.py
day3/my_package/: advanced_math.py  basic_math.py
day4/: exercise.py  handOn.py  student.py
day5/: exercise.py  handsOn.py
day6/: day6.py  exercide6.py  input.txt  output.txt
day7/: exercise.py  extra1.py  extra2.py  extra3.py  extra4.py  extra5.py  extra6.py  extra7.py  handsOn.py
day8/: Day8.py  exercise1.py  exercise2.py  exercise3.py
day9/: clouser.py  decrotor.py  input.py  main.py  main2.py
