[tool.poetry]
name = "student-db-project"
version = "0.1.0"
description = "A simple student database manager with sqlite3"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
